# tempest-fastapi-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release-pypi.yml
docs/: admin-showcase.en.md  admin-showcase.md  architecture.en.md  architecture.md  contributing.en.md  contributing.md  fullstack-web.en.md  fullstack-web.md  genai-examples.en.md  genai-examples.md  index.en.md  index.md  installation.en.md  installation.md  integrated.en.md  integrated.md  marketplace-local.en.md  marketplace-local.md  migration.en.md  migration.md  reference.en.md  reference.md  roadmap.en.md  roadmap.md  ssr.en.md  ssr.md  tour.en.md  tour.md  tutorial.en.md  tutorial.md
docs/learning/: index.en.md  index.md
docs/recipes/: admin.en.md  admin.md  artifact-registry.en.md  artifact-registry.md  audit-trail.en.md  audit-trail.md  auth-flow.en.md  auth-flow.md  authz.en.md  authz.md  br-helpers.en.md  br-helpers.md  cache.en.md  cache.md  chat.en.md  chat.md  cli.en.md  cli.md  database.en.md  database.md  deploy-safety.en.md  deploy-safety.md  downloads.en.md  downloads.md  email.en.md  email.md  feature-flags.en.md  feature-flags.md  fields.en.md  fields.md  file-store.en.md  file-store.md  genai.en.md  genai.md  geo.en.md  geo.md  http-client.en.md  http-client.md  http.en.md  http.md  (+58 more)
mkdocs_hooks/: llmstxt.py
planning/genai/: README.md  manual-validation.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  validation-strategy.md
scripts/: extract_recipe.py
tempest_fastapi_sdk/: __init__.py
tempest_fastapi_sdk/admin/: __init__.py  actions.py  auth.py  config.py  dashboard.py  discovery.py  forms.py  permissions.py  router.py  session.py  site.py  theme.py
tempest_fastapi_sdk/api/: __init__.py  cookies.py  handlers.py  oauth.py  server.py  static.py  tracing.py  webhooks.py
tempest_fastapi_sdk/artifacts/: __init__.py  actions.py  digest.py  model.py  registry.py
tempest_fastapi_sdk/auth/: __init__.py  guards.py  introspection.py  locale.py  page_renderer.py  router.py  schemas.py  service.py  token_delivery.py
tempest_fastapi_sdk/authz/: __init__.py  dependencies.py  permissions.py
tempest_fastapi_sdk/cache/: __init__.py  decorator.py  invalidation.py  redis_manager.py
tempest_fastapi_sdk/chat/: __init__.py  models.py  router.py  schemas.py  service.py
tempest_fastapi_sdk/checks/: __init__.py  builtins.py  messages.py  registry.py
tempest_fastapi_sdk/cli/: __init__.py  commands.py  config.py  db.py  docker_compose.py  generate.py  lint.py  main.py  new.py  secrets.py  src_layers.py  user.py
tempest_fastapi_sdk/controllers/: __init__.py  base.py
tempest_fastapi_sdk/core/: __init__.py  context.py  enums.py  logging.py  typed.py
tempest_fastapi_sdk/db/: __init__.py  alembic_hooks.py  audit.py  backup.py  connection.py  expressions.py  migrations.py  mixins.py  model.py  outbox.py  repository.py  signals.py  slow_query.py  tenant.py  user_model.py  user_recovery_code_model.py  user_refresh_token_model.py  user_token_model.py  webpush_subscription_model.py
tempest_fastapi_sdk/exceptions/: __init__.py  base.py  conflict.py  forbidden.py  i18n.py  jwt.py  not_found.py  too_many_requests.py  unauthorized.py  upload.py  validation.py
tempest_fastapi_sdk/flags/: __init__.py  backends.py  dependencies.py  service.py
tempest_fastapi_sdk/genai/: __init__.py  batching.py  embeddings.py  generation_cache.py  hardware.py  metrics.py  moderation.py  ollama.py  onnx_embed.py  pipeline.py  registry.py  router.py  schemas.py  structured.py  text.py  tokens.py  vision_text.py
tempest_fastapi_sdk/geo/: __init__.py  br.py  db.py  distance.py  enums.py  estimate.py  geocoding.py  geometry.py  polyline.py  routing.py  schemas.py
tempest_fastapi_sdk/queue/: __init__.py  broker.py  consumer.py  manager.py
tempest_fastapi_sdk/reviews/: __init__.py  models.py  router.py  schemas.py  service.py
tempest_fastapi_sdk/schemas/: __init__.py  base.py  link_headers.py  logs.py  pagination.py  response.py
tempest_fastapi_sdk/services/: __init__.py  base.py  file_mixin.py
tempest_fastapi_sdk/sessions/: __init__.py  dependencies.py  middleware.py  router.py  schemas.py  service.py  store.py
tempest_fastapi_sdk/settings/: __init__.py  base.py  mixins.py
tempest_fastapi_sdk/sse/: __init__.py  broker.py  event_stream.py
tempest_fastapi_sdk/ssr/: __init__.py  assets.py  attributes.py  page.py  response.py  webapp.py
tempest_fastapi_sdk/storage/: __init__.py  minio_client.py
tempest_fastapi_sdk/tasks/: __init__.py  cron.py  manager.py  oop.py  queue.py  scheduler.py
tempest_fastapi_sdk/testing/: __init__.py  database.py  factories.py
tempest_fastapi_sdk/utils/: __init__.py  client_ip.py  datetime.py  dict.py  download.py  email.py  fields.py  file_store.py  http_client.py  jwt.py  locations.py  log.py  metrics.py  opaque_token.py  password.py  regex.py  storage_backends.py  throttle.py  totp.py  upload.py
tempest_fastapi_sdk/vision/: __init__.py  mapping.py  router.py  schemas.py
tempest_fastapi_sdk/webpush/: __init__.py  dispatcher.py  router.py  schemas.py  service.py
tempest_fastapi_sdk/websockets/: __init__.py  hub.py  router.py  schemas.py
tests/: conftest.py
tests/admin/: test_actions.py  test_audit_viewer.py  test_auth.py  test_autocomplete_fk.py  test_csv_import.py  test_dashboard_cards.py  test_discovery.py  test_forms.py  test_inlines.py  test_lenses.py  test_logs_nav.py  test_mfa.py  test_rbac.py  test_rich_filters.py  test_router.py  test_site.py  test_theme.py  test_upload_field.py  test_user_model.py  test_widgets_json_time.py
tests/api/: test_body_size.py  test_business_metrics.py  test_cookies.py  test_cors.py  test_csrf.py  test_dependencies_auth.py  test_graceful.py  test_handlers.py  test_health_router.py  test_idempotency.py  test_jwt_dependency.py  test_logs_router.py  test_oauth.py  test_outbound_webhooks.py  test_prometheus.py  test_rate_limit.py  test_rate_limit_extras.py  test_request_id_middleware.py  test_role_dependency.py  test_server.py  test_static.py  (+4 more)
(+261 files in other folders)
