[project]
name = "tempest-fastapi-sdk"
version = "0.22.0"
description = "Shared FastAPI building blocks: base schemas, ORM model, async repository, exceptions, pagination and settings — the conventions used across Tempest projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mauricio Benjamin", email = "mauricio.benjamin@reloverelations.com" },
]
keywords = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "async",
    "repository",
    "pagination",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.118.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "typer>=0.12.0",
]

[project.optional-dependencies]
auth = [
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
]
email = [
    "aiosmtplib>=4.0.0",
]
upload = [
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
]
cache = [
    "redis>=5.0.0",
]
webpush = [
    "pywebpush>=2.0.0",
    "cryptography>=42.0.0",
]
metrics = [
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.560.30",
]
queue = [
    "faststream[rabbit]>=0.5.30",
]
tasks = [
    "taskiq>=0.11.0",
    "taskiq-aio-pika>=0.4.0",
]
admin = [
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
]
all = [
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "aiosmtplib>=4.0.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "redis>=5.0.0",
    "pywebpush>=2.0.0",
    "cryptography>=42.0.0",
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.560.30",
    "faststream[rabbit]>=0.5.30",
    "taskiq>=0.11.0",
    "taskiq-aio-pika>=0.4.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/mauriciobenjamin700/tempest-fastapi-sdk"
Repository = "https://github.com/mauriciobenjamin700/tempest-fastapi-sdk"
Issues = "https://github.com/mauriciobenjamin700/tempest-fastapi-sdk/issues"

[project.scripts]
tempest = "tempest_fastapi_sdk.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tempest_fastapi_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"tempest_fastapi_sdk/db/_alembic_templates/env.py.template" = "tempest_fastapi_sdk/db/_alembic_templates/env.py.template"

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "aiosmtplib>=4.0.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=5.0.0",
    "httpx>=0.28.1",
    "mypy>=1.13.0",
    "pyjwt>=2.12.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "python-multipart>=0.0.12",
    "fakeredis>=2.20.0",
    "pywebpush>=2.0.0",
    "cryptography>=42.0.0",
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.560.30",
    "redis>=5.0.0",
    "ruff>=0.8.0",
    "faststream[rabbit]>=0.5.30",
    "taskiq>=0.11.0",
    "taskiq-aio-pika>=0.4.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "pymdown-extensions>=10.0",
    "mkdocs-include-markdown-plugin>=7.0.0",
    "mkdocs-static-i18n>=1.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
    "RUF",
]
ignore = [
    "B008",
    "B006",
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = ["F401"]
"tempest_fastapi_sdk/db/repository.py" = ["UP006", "UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "aiosmtplib.*",
    "aiofiles.*",
    "aiofiles",
    "pywebpush",
    "pywebpush.*",
    "pynvml",
    "pynvml.*",
    "psutil",
    "psutil.*",
    "faststream.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=tempest_fastapi_sdk",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["tempest_fastapi_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
