[project]
name = "tempest-fastapi-sdk"
version = "0.126.0"
description = "Shared FastAPI building blocks: base schemas, ORM model, async repository, exceptions, pagination and settings — the conventions used across Tempest projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mauricio Benjamin", email = "mauricio.benjamin@reloverelations.com" },
]
keywords = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "async",
    "repository",
    "pagination",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.18.4",
    "click>=8.0.0",
    "fastapi>=0.118.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "typer>=0.12.0",
]

[project.optional-dependencies]
auth = [
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
]
email = [
    "aiosmtplib>=4.0.0",
    "jinja2>=3.1.0",
    "email-validator>=2.0.0",
]
upload = [
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
]
cache = [
    "redis>=5.0.0",
]
webpush = [
    "pywebpush>=2.0.0",
    "cryptography>=42.0.0",
]
metrics = [
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.560.30",
]
queue = [
    "faststream[rabbit]>=0.7.1",
]
tasks = [
    "taskiq>=0.11.0",
    "taskiq-aio-pika>=0.4.0",
]
admin = [
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
]
minio = [
    "minio>=7.2.0",
]
http = [
    "httpx>=0.28.0",
]
prometheus = [
    "prometheus-client>=0.20.0",
]
mfa = [
    "pyotp>=2.9.0",
]
vision = [
    "ort-vision-sdk>=0.4.0",
]
genai = [
    "transformers>=4.44.0",
    "torch>=2.2.0",
    "accelerate>=0.33.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.24.0",
]
genai-quant = [
    "bitsandbytes>=0.43.0",
]
genai-rag = [
    "httpx>=0.28.0",
    "trafilatura>=1.12.0",
    "pymupdf>=1.24.0",
    "pgvector>=0.3.0",
]
genai-audio = [
    "faster-whisper>=1.0.0",
    "coqui-tts>=0.24.0",
]
genai-ollama = [
    "httpx>=0.28.0",
]
genai-chroma = [
    "chromadb>=0.5.0",
]
geo = [
    "httpx>=0.28.0",
]
ssr = [
    "tempestweb>=0.9.0",
]
sqlite = [
    "aiosqlite>=0.20.0",
]
postgres = [
    "asyncpg>=0.30.0",
]
otel = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]
all = [
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "aiosmtplib>=4.0.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "redis>=5.0.0",
    "pywebpush>=2.0.0",
    "cryptography>=42.0.0",
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.560.30",
    "faststream[rabbit]>=0.7.1",
    "taskiq>=0.11.0",
    "taskiq-aio-pika>=0.4.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "minio>=7.2.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.20.0",
    "pyotp>=2.9.0",
    "email-validator>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "ort-vision-sdk>=0.4.0",
    "tempestweb>=0.9.0",
    "chromadb>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/mauriciobenjamin700/tempest-fastapi-sdk"
Repository = "https://github.com/mauriciobenjamin700/tempest-fastapi-sdk"
Issues = "https://github.com/mauriciobenjamin700/tempest-fastapi-sdk/issues"

[project.scripts]
tempest = "tempest_fastapi_sdk.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tempest_fastapi_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"tempest_fastapi_sdk/db/_alembic_templates/env.py.template" = "tempest_fastapi_sdk/db/_alembic_templates/env.py.template"
# Bundled auth templates ship under per-locale subdirs (pt-BR/, en-US/).
"tempest_fastapi_sdk/auth/templates/pt-BR/activation.html" = "tempest_fastapi_sdk/auth/templates/pt-BR/activation.html"
"tempest_fastapi_sdk/auth/templates/pt-BR/password_reset.html" = "tempest_fastapi_sdk/auth/templates/pt-BR/password_reset.html"
"tempest_fastapi_sdk/auth/templates/pt-BR/activation_success.html" = "tempest_fastapi_sdk/auth/templates/pt-BR/activation_success.html"
"tempest_fastapi_sdk/auth/templates/pt-BR/activation_error.html" = "tempest_fastapi_sdk/auth/templates/pt-BR/activation_error.html"
"tempest_fastapi_sdk/auth/templates/pt-BR/password_reset_form.html" = "tempest_fastapi_sdk/auth/templates/pt-BR/password_reset_form.html"
"tempest_fastapi_sdk/auth/templates/pt-BR/password_reset_success.html" = "tempest_fastapi_sdk/auth/templates/pt-BR/password_reset_success.html"
"tempest_fastapi_sdk/auth/templates/pt-BR/password_reset_error.html" = "tempest_fastapi_sdk/auth/templates/pt-BR/password_reset_error.html"
"tempest_fastapi_sdk/auth/templates/en-US/activation.html" = "tempest_fastapi_sdk/auth/templates/en-US/activation.html"
"tempest_fastapi_sdk/auth/templates/en-US/password_reset.html" = "tempest_fastapi_sdk/auth/templates/en-US/password_reset.html"
"tempest_fastapi_sdk/auth/templates/en-US/activation_success.html" = "tempest_fastapi_sdk/auth/templates/en-US/activation_success.html"
"tempest_fastapi_sdk/auth/templates/en-US/activation_error.html" = "tempest_fastapi_sdk/auth/templates/en-US/activation_error.html"
"tempest_fastapi_sdk/auth/templates/en-US/password_reset_form.html" = "tempest_fastapi_sdk/auth/templates/en-US/password_reset_form.html"
"tempest_fastapi_sdk/auth/templates/en-US/password_reset_success.html" = "tempest_fastapi_sdk/auth/templates/en-US/password_reset_success.html"
"tempest_fastapi_sdk/auth/templates/en-US/password_reset_error.html" = "tempest_fastapi_sdk/auth/templates/en-US/password_reset_error.html"
"tempest_fastapi_sdk/utils/data/br_locations.json" = "tempest_fastapi_sdk/utils/data/br_locations.json"
# Locally-bundled HTMX asset for the [ssr] extra (served without a CDN).
"tempest_fastapi_sdk/ssr/_static/htmx.min.js" = "tempest_fastapi_sdk/ssr/_static/htmx.min.js"

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "aiosmtplib>=4.0.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=5.0.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pyjwt>=2.12.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "python-multipart>=0.0.12",
    "fakeredis>=2.20.0",
    "pywebpush>=2.0.0",
    "cryptography>=42.0.0",
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.560.30",
    "redis>=5.0.0",
    "ruff>=0.8.0",
    "trafilatura>=1.12.0",
    "pymupdf>=1.24.0",
    "faststream[rabbit]>=0.7.1",
    "taskiq>=0.11.0",
    "taskiq-aio-pika>=0.4.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "minio>=7.2.0",
    "prometheus-client>=0.20.0",
    "pyotp>=2.9.0",
    "email-validator>=2.0.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "tempestweb>=0.9.0",
    "chromadb>=0.5.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "pymdown-extensions>=10.0",
    "mkdocs-include-markdown-plugin>=7.0.0",
    "mkdocs-static-i18n>=1.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
    "RUF",
    "ANN",
]
ignore = [
    "B008",
    "B006",
    "UP046",
    # ``Any`` is a legitimate annotation. We enforce that things ARE
    # annotated, never that they avoid ``Any`` -- so ANN401 stays off.
    "ANN401",
    # ``*args`` / ``**kwargs`` annotations add noise for the thin
    # passthrough wrappers the SDK exposes.
    "ANN002",
    "ANN003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = ["F401"]
"tempest_fastapi_sdk/db/repository.py" = ["UP006", "UP035"]
# Renders YAML compose snippets as f-string literals — long lines
# (healthcheck commands, `mc` entrypoints) are content, not code.
"tempest_fastapi_sdk/cli/docker_compose.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "aiosmtplib.*",
    "aiofiles.*",
    "aiofiles",
    "pywebpush",
    "pywebpush.*",
    "pynvml",
    "pynvml.*",
    "psutil",
    "psutil.*",
    "faststream.*",
    "taskiq_redis",
    "taskiq_redis.*",
    "typer._click",
    "typer._click.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "huggingface_hub",
    "huggingface_hub.*",
    "accelerate",
    "accelerate.*",
    "trafilatura",
    "trafilatura.*",
    "pymupdf",
    "fitz",
    "faster_whisper",
    "faster_whisper.*",
    "TTS",
    "TTS.*",
    "pyotp",
    "pyotp.*",
    "ort_vision_sdk",
    "ort_vision_sdk.*",
    "tempestweb",
    "tempestweb.*",
    "tempest_core",
    "tempest_core.*",
    "chromadb",
    "chromadb.*",
]
ignore_missing_imports = true

# numpy (pulled in transitively via ort-vision-sdk) ships stubs that use
# the 3.12+ ``type X = ...`` statement, which mypy rejects while targeting
# python_version 3.11. We never type-check against numpy internals, so skip
# following its stubs entirely.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=tempest_fastapi_sdk",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["tempest_fastapi_sdk"]
branch = true
# Async FastAPI handlers run under anyio worker threads / greenlets when
# driven by the ASGI test client; without this the tracer misses their
# bodies and every router handler is under-reported as uncovered.
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
